# pacmanager

./: .SRCINFO  .gitignore  LICENSE.txt  PKGBUILD  README.md  meson.build
.cache/clangd/index/: database.hpp.E51F1D07B23DFA90.idx  logic.hpp.F24061478A86F860.idx  main.cpp.4AF1B05EAA70E0F6.idx  package.hpp.18BAAB5EBB285582.idx  search.hpp.53648C102C36D7C6.idx  test.cpp.A4853D01112E1E14.idx
.github/workflows/: AUR.yml
src/: database.hpp  logic.hpp  main.cpp  package.hpp  search.hpp  test.cpp
